instructions for grader in readme in case they don't have vscode and can't just press run in vscode